# polars-ts

./: 404.html  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  gen_ref_pages.py  gen_rust_ref_pages.py  index.html  mkdocs.yaml  objects.inv  pyproject.toml
.github/workflows/: ci.yml
clustering-guide/: index.html
contributing/: index.html
distance-metrics/: index.html
docs/: changepoint-guide.md  clustering-guide.md  forecasting-guide.md  imaging-guide.md  index.md  preprocessing-guide.md
notebooks/: 01_data_wrangling_and_exploration.ipynb  02_feature_engineering_transforms.ipynb  03_forecasting_fundamentals.ipynb  13_agentic_forecasting.ipynb
polars_ts/: __init__.py  _lazy.py  bayesian_var.py
polars_ts/adapters/: __init__.py  foundation_forecast.py
polars_ts/agents/: __init__.py  _protocol.py  curator.py  forecaster.py  planner.py  reporter.py  scientist.py
polars_ts/backtesting/: __init__.py  backtest.py
polars_ts/bayesian/: __init__.py  bsts.py  enkf.py  kalman.py  mcmc.py  ukf.py
polars_ts/causal/: __init__.py  causal_impact.py  synthetic_control.py
polars_ts/changepoint/: __init__.py  cusum.py
polars_ts/classification/: __init__.py  _dl_utils.py  inception_time.py  resnet_classifier.py  rocket_classifier.py
polars_ts/clustering/: __init__.py  _augmentation.py  _autoencoder.py  _contrastive_loss.py  auto.py  contrastive.py  deep_cluster.py  kmeans.py
polars_ts/decomposition/: __init__.py  _anomaly.py  fourier_decomposition.py  seasonal_decomposition.py
polars_ts/dl/: __init__.py  _training.py  nbeats.py  patchtst.py
polars_ts/ensemble/: __init__.py
polars_ts/features/: __init__.py
polars_ts/imaging/: __init__.py  _utils.py  angular.py  embeddings.py  recurrence.py  signature.py  spectral.py  transition.py
polars_ts/models/: __init__.py  bayesian_ets.py
polars_ts/probabilistic/: __init__.py
polars_ts/transforms/: __init__.py
polars_ts/validation/: __init__.py
reference/polars_ts/__init__/: index.html
reference/polars_ts/_distance_dispatch/: index.html
reference/polars_ts/adapters/__init__/: index.html
reference/polars_ts/adapters/embeddings/: index.html
reference/polars_ts/adapters/huggingface/: index.html
reference/polars_ts/adapters/neuralforecast/: index.html
reference/polars_ts/adapters/pytorch_forecasting/: index.html
reference/polars_ts/adapters/rl_env/: index.html
reference/polars_ts/anomaly_forest/: index.html
reference/polars_ts/bias/: index.html
reference/polars_ts/calibration/: index.html
reference/polars_ts/changepoint/__init__/: index.html
reference/polars_ts/changepoint/bocpd/: index.html
reference/polars_ts/changepoint/cusum/: index.html
reference/polars_ts/changepoint/pelt/: index.html
reference/polars_ts/changepoint/regime/: index.html
reference/polars_ts/classification/__init__/: index.html
reference/polars_ts/classification/knn/: index.html
reference/polars_ts/classification/kshape_classifier/: index.html
reference/polars_ts/clustering/__init__/: index.html
reference/polars_ts/clustering/auto/: index.html
reference/polars_ts/clustering/dba/: index.html
reference/polars_ts/clustering/density/: index.html
reference/polars_ts/clustering/evaluation/: index.html
reference/polars_ts/clustering/hierarchical/: index.html
reference/polars_ts/diagnostics/: index.html
reference/polars_ts/distance/: index.html
reference/polars_ts/global_model/: index.html
reference/polars_ts/importance/: index.html
reference/polars_ts/imputation/: index.html
reference/polars_ts/outliers/: index.html
reference/polars_ts/pipeline/: index.html
reference/polars_ts/reconciliation/: index.html
reference/polars_ts/resampling/: index.html
reference/polars_ts/var_model/: index.html
reference/polars_ts/volatility/: index.html
reference/rust/SUMMARY/: index.html
reference/rust/ddtw/: index.html
reference/rust/dtw/: index.html
reference/rust/dtw_multi/: index.html
reference/rust/edr/: index.html
reference/rust/erp/: index.html
reference/rust/ets/: index.html
reference/rust/frechet/: index.html
reference/rust/kmedoids/: index.html
reference/rust/lcss/: index.html
reference/rust/mann_kendall/: index.html
reference/rust/msm/: index.html
reference/rust/msm_multi/: index.html
reference/rust/pelt/: index.html
reference/rust/sbd/: index.html
reference/rust/sens_slope/: index.html
reference/rust/twe/: index.html
reference/rust/utils/: index.html
reference/rust/wdtw/: index.html
search/: search_index.json
src/: lib.rs  sbd.rs  sens_slope.rs
tests/: test_bayesian_var.py  test_cusum.py  test_distance_metrics.py  test_dl_forecasters.py  test_foundation_forecast.py  test_sens_slope.py
tests/agents/: test_agents.py
tests/backtesting/: test_backtest.py
tests/bayesian/: test_bsts.py  test_enkf.py  test_kalman.py  test_mcmc.py  test_ukf.py
tests/causal/: conftest.py  test_causal_impact.py  test_synthetic_control.py
tests/changepoint/: test_advanced.py
tests/classification/: test_deep_classifiers.py
tests/clustering/: test_auto.py  test_contrastive.py  test_deep_cluster.py
tests/decomposition/: test_anomaly_flags.py
tests/imaging/: test_angular.py  test_embeddings.py  test_recurrence.py  test_signature.py  test_spectral.py  test_transition.py
tests/models/: test_bayesian_ets.py
(+38 files in other folders)
