[package]
name = "polars-ts-rs"
version = "0.3.1"
edition = "2021"

[lib]
name = "polars_ts_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23.4", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "0.20.0", features = ["derive"] }
ordered-float = "3"
rayon = "1.7.0"
serde = { version = "1", features = ["derive"] }
itertools = "0.14.0"
polars = { version = "0.46.0", features = ["lazy", "ndarray"] }
polars-rows-iter = "0.9.1"
polars-core = "0.46.0"
polars-arrow = "0.46.0"
rustfft = "6"

[features]
default = ["python"]
python = []
