[package]
name = "polars-ts-rs"
version = "0.7.0"
edition = "2021"

[lib]
name = "polars_ts_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25.0", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "0.22.0", features = ["derive"] }
ordered-float = "5"
rayon = "1.10.0"
serde = { version = "1", features = ["derive"] }
itertools = "0.14.0"
polars = { version = "0.49.1", features = ["lazy", "ndarray"] }
polars-core = "0.49.1"
polars-arrow = "0.49.1"
numpy = "0.25"
ndarray = "0.16"
rand = "0.8"
rand_chacha = "0.3"

[features]
default = ["python"]
python = []
